--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.20.0",
+    "axios": "^1.7.7",
+    "mysql2": "^3.11.3",
     "next": "14.2.14",
     "next-images": "^1.8.5",
+    "prisma": "^5.20.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
@@ -19,5 +23,8 @@
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.2.14"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js" 
   }
 }
