--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portefolio",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,12 +10,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.20.0",
+    "@prisma/client": "^5.21.0",
     "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "mysql2": "^3.11.3",
     "next": "14.2.14",
     "next-images": "^1.8.5",
-    "prisma": "^5.20.0",
+    "nodemon": "^3.1.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
@@ -22,9 +24,10 @@
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.2.14"
+    "eslint-config-next": "14.2.14",
+    "prisma": "^5.21.0"
   },
   "prisma": {
-    "seed": "node prisma/seed.js" 
+    "seed": "node prisma/seed.js"
   }
 }
