--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "sass": "^1.79.4"
+    "react-particles": "^2.12.2",
+    "react-tsparticles": "^2.12.2",
+    "sass": "^1.79.4",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "eslint": "^8",
