--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@prisma/client": "^5.21.1",
     "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
     "next": "14.2.14",
     "next-images": "^1.8.5",
