--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cookie": "^1.0.1",
     "cookies-next": "^4.3.0",
     "dotenv": "^16.4.5",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
     "next": "14.2.14",
